update localization files

--- a/locale/en-US/global.properties
+++ b/locale/en-US/global.properties
@@ -1,3 +1,5 @@
+extensionDescription=Override HTTP header Content-Disposition
+
 activatedTooltip=working now
 deactivatedTooltip=not working now
 openPreferences=Preferences...
