auto generate metainfo

--- a/src/locale/en-US/global.properties
+++ b/src/locale/en-US/global.properties
@@ -1,4 +1,5 @@
 extensionDescription=Override HTTP header Content-Disposition
+extensionName=ReDisposition
 
 activatedTooltip=working now
 deactivatedTooltip=not working now
