--- a/src/locale/zh-TW/global.properties
+++ b/src/locale/zh-TW/global.properties
@@ -1,4 +1,5 @@
 extensionDescription=改寫 HTTP 協議頭的 Content-Disposition
+extensionName=ReDisposition
 
 activatedTooltip=正在工作中
 deactivatedTooltip=不在工作中
