--- a/src/locale/zh-CN/global.properties
+++ b/src/locale/zh-CN/global.properties
@@ -1,4 +1,5 @@
 extensionDescription=改写 HTTP 协议头的 Content-Disposition
+extensionName=ReDisposition
 
 activatedTooltip=正在工作中
 deactivatedTooltip=不在工作中
